argocd/manifests/netlock-rmm/base/deployment-console.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netlock-console
  namespace: netlock-rmm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: netlock-console
  template:
    metadata:
      labels:
        app: netlock-console
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: console
          image: nicomak101/netlock-rmm-web-console@sha256:737d8c387c48bc02abe623dc7a886da3b81c0cea36c49df38e3f79dfc3096957
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: appsettings
              mountPath: /app/appsettings.json
              subPath: appsettings.json
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: appsettings
          secret:
            secretName: netlock-console-appsettings
            defaultMode: 0444
