argocd/manifests/netlock-rmm/base/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netlock-server
  namespace: netlock-rmm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: netlock-server
  template:
    metadata:
      labels:
        app: netlock-server
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: server
          image: nicomak101/netlock-rmm-server@sha256:a13e6fb2520d0c8321614aa32dd8580b7486585189e1c5cf9c2f500a734caaf5
          ports:
            - containerPort: 7080
          volumeMounts:
            - name: appsettings
              mountPath: /app/appsettings.json
              subPath: appsettings.json
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          readinessProbe:
            tcpSocket:
              port: 7080
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 7080
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: appsettings
          configMap:
            name: netlock-server-appsettings
