argocd/manifests/netlock-rmm/base/service-console.yaml
apiVersion: v1
kind: Service
metadata:
  name: netlock-console
  namespace: netlock-rmm
spec:
  selector:
    app: netlock-console
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
