argocd/manifests/netlock-rmm/base/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: netlock-mysql
  namespace: netlock-rmm
spec:
  selector:
    app: netlock-mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
