argocd/manifests/netlock-rmm/base/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: netlock-server
  namespace: netlock-rmm
spec:
  selector:
    app: netlock-server
  ports:
    - name: http
      port: 7080
      targetPort: 7080
  type: ClusterIP
