argocd/manifests/netlock-rmm/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netlock-rmm-ingress
  namespace: netlock-rmm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: rmm.levangie.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netlock-console
                port:
                  number: 5000
    - host: rmm-api.levangie.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netlock-server
                port:
                  number: 7080
